--- a/index.html
+++ b/index.html
@@ -6,32 +6,94 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/style.css" rel="stylesheet" />
-    <title>FullStackVox</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <title>Edson Souza</title>
 </head>
 
 <body>
+    <nav class="navbar navbar-dark navbar-expand-lg bg-dark ">
+        <div class="container-fluid">
+            <div class="mx-4">
+                <a class="navbar-brand" href="#">Edson Souza</a>
+            </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Projetos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Estudos</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-    <div class="notice">
-        <main>
-            <h1>FullStackVox</h1>
+    <div class="container my-4 ">
+        <div class="row justify-content-center">
+            <div class="col-lg mb-lg-4">
+                <img src="/img/imagem.jpg" class="img-fluid" alt="" srcset="">
+            </div>
+            <div class="col-lg mx-2 align-self-center">
+                <div class="my-3">
+                    <h1 class="text-center">Olá, eu sou Edson Souza</h1>
+                    <p>Apaixonado por tecnologia, bons livros, ficção cientifica e artes marciais... entre outras coisas. Atualmente trabalhando como Analista de 
+                        Qualidade (QA) mas buscando sempre novos conhecimentos sobre novas tecnologias. Usuário de Linux. Atualmente estudando Java, Python, Selenium
+                         e Cypress. Sejam bem vindos a minha página. Um repositório de meus estudos e experimentos.
+                    </p>
+                </div>
+            </div>
+        </div>
 
-
-            <h2>Uma dica de sabedoria...</h2>
-
-            <section>
-                <p>“Aprende a ser pobre em espírito, meu filho, <br />
-                    se queres penetrar nessa noite sagrada que envolve a verdade.
-                <p>Aprende dos Sábios a não conceder aos Diabos nenhum poder na Natureza,<br />
-                    desde que a pedra fatal os encerrou nas profundezas do abismo.</p>
-                <p>Aprende dos filósofos a procurar sempre causas naturais em todos os acontecimentos
-                    extraordinários;<br />
-                    e quando faltarem tais causas naturais recorre a Deus”.</p>
-
-                <p>Conde de Gabalis</p>
-            </section>
-        </main>
+        <div class="my-4">
+            <div class="text-center mb-4">
+                <h1>My Skills</h1>
+            </div>
+            <div class="row ">
+                <style>
+                    I {
+                        font-size: 4em;
+                    }
+                </style>
+                
+                <div class="col">
+                    <div class="text-center">
+                        <h4>Java</h4>
+                        <i class="devicon-java-plain"></i>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="text-center">
+                        <h4>Selenium</h4>
+                        <i class="devicon-selenium-plain"></i>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="text-center">
+                        <h4>Python</h4>
+                        <i class="devicon-python-plain"></i>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="text-center">
+                        <h4>GitHub</h4>
+                        <i class="devicon-github-original" ></i>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
+    
+
 </body>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
 </html>
