Added website source code and image 3

--- a/projetos/index.html
+++ b/projetos/index.html
@@ -58,20 +58,13 @@
                     <tbody>
                       <tr>
                         <td><a href="receita/">Receita</a></td>
-                        <td>Deveria ser uma receita de bolo. Mas virou algo mais. </td>
+                        <td>Deveria ser uma receita de bolo. Mas virou algo mais.😁 </td>
                       </tr>
                       <tr>
                         <td><a href="ilha-bela/">Parque Estadual Ilha Bela</a></td>
-                        <td>Ok. Um parque bonitinho. Mas eu preferia algo sobre o planeta Krieg.  ;-) </td>
+                        <td>Ok. Um parque bonitinho. Mas eu preferia algo sobre o planeta Krieg.  😏 </td>
                       </tr>
-                      <tr>
-                        <td><a href="#">Parque Estadual Ilha Bela</a></td>
-                        <td>Ok. Um parque bonitinho. Mas eu preferia algo sobre o planeta Krieg.  ;-) </td>
-                      </tr>
-                      <tr>
-                        <td><a href="#">Parque Estadual Ilha Bela</a></td>
-                        <td>Ok. Um parque bonitinho. Mas eu preferia algo sobre o planeta Krieg.  ;-) </td>
-                      </tr>
+                      
                       
                     </tbody>
                   </table>
