Added website source code and image-Barbearia

--- a/projetos/index.html
+++ b/projetos/index.html
@@ -64,6 +64,10 @@
                         <td><a href="ilha-bela/">Parque Estadual Ilha Bela</a></td>
                         <td>Ok. Um parque bonitinho. Mas eu preferia algo sobre o planeta Krieg.  😏 </td>
                       </tr>
+                      <tr>
+                        <td><a href="barbearia/">Barbearia Stylus</a></td>
+                        <td>Marque uma hora na nossa barbearia. Bons papos, ambiente acolhedor e ótimos serviços</td> 😉😉😉 </td>
+                      </tr>
                       
                       
                     </tbody>
