Added website source code and image-Barbearia - Correção

--- a/projetos/index.html
+++ b/projetos/index.html
@@ -66,7 +66,7 @@
                       </tr>
                       <tr>
                         <td><a href="barbearia/">Barbearia Stylus</a></td>
-                        <td>Marque uma hora na nossa barbearia. Bons papos, ambiente acolhedor e ótimos serviços</td> 😉😉😉 </td>
+                        <td>Marque uma hora na nossa barbearia. Bons papos, ambiente acolhedor e ótimos serviços 😉</td> 
                       </tr>
                       
                       
