--- a/projetos/index.html
+++ b/projetos/index.html
@@ -68,6 +68,10 @@
                         <td><a href="barbearia/">Barbearia Stylus</a></td>
                         <td>Marque uma hora na nossa barbearia. Bons papos, ambiente acolhedor e ótimos serviços 😉</td> 
                       </tr>
+                      <tr>
+                        <td><a href="livro/">Contos do Mestre do Horror Cósmico</a></td>
+                        <td>Marque uma hora na nossa barbearia. Bons papos, ambiente acolhedor e ótimos serviços 😉</td> 
+                      </tr>
                       
                       
                     </tbody>
