Added website source code and image- Livro - Correção

--- a/projetos/index.html
+++ b/projetos/index.html
@@ -70,7 +70,7 @@
                       </tr>
                       <tr>
                         <td><a href="livro/">Contos do Mestre do Horror Cósmico</a></td>
-                        <td>Marque uma hora na nossa barbearia. Bons papos, ambiente acolhedor e ótimos serviços 😉</td> 
+                        <td>Que tal dar uma lida nesse livro "leve" e tranquilo? 😉</td> 
                       </tr>
                       
                       
