Added website Blog Test 2

--- a/projetos/index.html
+++ b/projetos/index.html
@@ -12,28 +12,28 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark navbar-expand-lg bg-dark ">
-        <div class="container-fluid">
-            <div class="mx-4">
-                <a class="navbar-brand" href="/index.html">Edson Souza</a>
-            </div>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/projetos/">Projetos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Estudos</a>
-                    </li>
-                </ul>
-            </div>
+  <nav class="navbar navbar-dark navbar-expand-lg bg-dark ">
+    <div class="container-fluid">
+        <div class="mx-4">
+            <a class="navbar-brand" href="#">Edson Souza</a>
         </div>
-    </nav>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="projetos/">Projetos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="blog/_site/">The Captain's log</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
     <div class="container my-4 ">
         <div class="row justify-content-center">
