--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="/projetos/">Projetos</a>
+                        <a class="nav-link" href="projetos/">Projetos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Estudos</a>
+                        <a class="nav-link" href="blog/_site/">The Captain's log</a>
                     </li>
                 </ul>
             </div>
