--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="projetos/">Projetos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="blog/_site/">The Captain's log</a>
+                        <a class="nav-link" href="blog/_site/">Blog</a>
                     </li>
                 </ul>
             </div>
