--- a/projetos/index.html
+++ b/projetos/index.html
@@ -15,25 +15,25 @@
 <body>
   <nav class="navbar navbar-dark navbar-expand-lg bg-dark ">
     <div class="container-fluid">
-      <div class="mx-4">
-        <a class="navbar-brand" href="/index.html">Edson Souza</a>
-      </div>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
-        aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="/projetos/">Projetos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/estudos/">Estudos</a>
-          </li>
-        </ul>
-      </div>
+        <div class="mx-4">
+            <a class="navbar-brand" href="/index.html">Edson Souza</a>
+        </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+            aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="/projetos/">Projetos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/blog/">Blog</a>
+                </li>
+            </ul>
+        </div>
     </div>
-  </nav>
+</nav>
 
   <div class="container my-4 ">
     <div class="row justify-content-center">
